# lumberjack-compiler

./: .gitignore  Cargo.toml  flake.nix
bench-data/compiled-models/: iris_100_50.rforest  test_2_nodes.rforest
bench-data/datasets/: skydive_sc2_2.CSV  skydive_sc2_3.CSV  skydive_sc2_4.CSV  skydive_sc2_5.CSV  skydive_sc2_6.CSV  skydive_sc6_1.CSV  skydive_sc6_2.CSV  skydive_sc6_3.CSV  skydive_sc6_4.CSV  skydive_sc6_5.CSV  skydive_sc6_6.CSV  skydive_sc6_7.CSV  skydive_sc6_8.CSV  skydive_sc6_9.CSV  skydive_sp1_1.CSV  skydive_sp1_2.CSV  skydive_sp1_6.CSV  skydive_sp1_8.CSV  skydive_sp1_9.CSV  skydive_sp2_1.CSV  skydive_sp2_2.CSV  skydive_sp2_3.CSV
bench-data/optimized-forests/: iris_100_50.rforest  skydive_100_50.rforest
bench-data/trained-models/: iris_100_50.csv  skydive_100_50.csv  test_2_nodes.csv
compiler/: Cargo.toml
compiler/src/: compiled_model.rs  compiler.rs  csv_source.rs  feature_vectors.rs  ir.rs  lib.rs  main.rs  problem.rs
compiler/src/compiler/: tree_compiler.rs  tree_partition.rs
compiler/src/ir/: tree_compiler.rs
compiler/tests/api/: forest_accuracy.rs  helpers.rs  main.rs  serialization.rs
compiler/tests/test-data/: iris.csv
compiler/tests/test-forests/: forest_iris_800.csv
embedded-rforest/: Cargo.toml
embedded-rforest/src/: forest.rs  lib.rs  ptr.rs
embedded-rforest/src/forest/: deserialize.rs  serialize.rs
forest-optimizer/: Cargo.toml
forest-optimizer/src/: csv_forest.rs  forest.rs  lib.rs  problem_type.rs  serialize.rs  serialized_forest.rs  write_forest.rs
forest-optimizer/tests/api/: forest_accuracy.rs  helpers.rs  main.rs  problem_types.rs  serialization.rs
forest-optimizer/tests/api/datasets/: airfoil.rs  iris.rs
forest-optimizer/tests/test-forests/: airfoil_100_50.csv  airfoil_100_50.rforest  forest_iris_5.rforest
lumberjack-compiler/: Cargo.toml
lumberjack-compiler/src/: compiled_model.rs  compiler.rs  csv_forest.rs  csv_source.rs  forest.rs  forest_model.rs  lib.rs  main.rs  problem.rs  serialize.rs  write_forest.rs
lumberjack-compiler/tests/api/: forest_accuracy.rs  helpers.rs  main.rs  serialization.rs
lumberjack-compiler/tests/api/datasets/: iris.rs
lumberjack-compiler/tests/test-data/: iris.csv
lumberjack-compiler/tests/test-forests/: forest_iris_5.csv  forest_iris_5.rforest
lumberjack-macros/: Cargo.toml
lumberjack-macros/src/: lib.rs
lumberjack-model/: Cargo.toml
lumberjack-model/src/: lib.rs  model.rs
lumberjack-model/src/forest/: deserialize.rs
lumberjack-model/src/model/: deserialize.rs  serialize.rs
model/: Cargo.toml
model/src/: lib.rs  model.rs  storage.rs
model/src/model/: deserialize.rs  serialize.rs
