[package]
name = "lumberjack-compiler"
version = "1.1.0"
edition = "2024"

[dependencies]
bytesize = "2.4"
color-eyre = { version = "0.6.3", default-features = false }
csv = "1.3.1"
clap = { version = "4.5", features = ["derive"] }
half = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tap = "1.0.1"
zerocopy = { workspace = true }
indexmap = "2.14.0"
rand = "0.10.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
yaml_serde = "0.10.4"

[dependencies.lumberjack-model]
path = "../model"
features = ["std"]

