[package]
name = "forest-optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }
csv = "1.3.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
embedded-rforest = { path = "../embedded-rforest", features = ["std"]}
serde_json = "1.0.133"

[dependencies.half]
workspace = true
