[package]
name = "lumberjack-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
aligned-vec = { version = "0.6.1" }
color-eyre = { version = "0.6.3", default-features = false }
csv = "1.3.1"
clap = { version = "4.5", features = ["derive"] }
half = { workspace = true }
phf = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tap = "1.0.1"
zerocopy = { workspace = true }

[dependencies.lumberjack-model]
path = "../lumberjack-model"

