[package]
name = "lumberjack-compiler"
version = "0.1.1"
edition = "2024"

[dependencies]
bytesize = "2.4"
color-eyre = { version = "0.6.3", default-features = false }
csv = "1.3.1"
clap = { version = "4.5", features = ["derive"] }
half = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tap = "1.0.1"
zerocopy = { workspace = true }
indexmap = "2.14.0"

[dependencies.lumberjack-model]
path = "../lumberjack-model"
features = ["std"]

