[package]
name = "lumberjack-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
csv = "1.4.0"
lumberjack-model = { path = "../lumberjack-model" }
lumberjack-compiler = { path = "../lumberjack-compiler" }
